# my-built-mcps

my_built_mcps/: claude_desktop_config.json
my_built_mcps/code-intelligence/: claude_desktop_config.json  code_intelligence_server_pro.py
my_built_mcps/mcp_context_server/: README.md  context_memory_mcp.py  main.py  requirements.txt
my_built_mcps/mcp_context_server/cache/: redis_manager.py
my_built_mcps/mcp_context_server/config/: settings.py
my_built_mcps/mcp_federation/: federated_claude_desktop_config.json  mcp_federated_router.py  requirements.txt  toolkit_manifest.json
my_built_mcps/secure-memory-mcp/: Dockerfile  README_FIXED.md  README_HYBRID.md  claude_desktop_config.json  claude_desktop_config_fixed.json  claude_desktop_config_hybrid.json  launch checklist.txt  pyproject.toml  requirements_fixed.txt  requirements_hybrid.txt  run_hybrid.py  run_hybrid_fixed.py  setup_package_structure.sh  test_hybrid.py  test_hybrid_fixed.py
my_built_mcps/secure-memory-mcp/config/: sandbox_profiles.yaml  security_enforcer.yaml
my_built_mcps/secure-memory-mcp/docs/: README.md  file_structure.md  fixes_and_improvements.md  production_checklist.md  secure-memory-mcp-server.md
my_built_mcps/secure-memory-mcp/monitoring/: dashboard.html
my_built_mcps/secure-memory-mcp/scripts/: deploy.sh
my_built_mcps/secure-memory-mcp/secure_memory/: server.py
my_built_mcps/secure-memory-mcp/src/: server_monitor.py
my_built_mcps/secure-memory-mcp/tests/: test_security.py
my_built_mcps/universal-mcp/: PRODUCTION_DEPLOYMENT.md  shopify_assitant.py  universal_api_gateway.py
(+29 files in other folders)
