[tool.poetry]
name = "secure-memory-mcp"
version = "1.0.0"
description = "A bulletproof MCP server for AI memory management with security-first design"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mcp = "^0.1.0"
aiosqlite = "^0.19.0"
jsonschema = "^4.20.0"
aiohttp = "^3.9.1"  # For health check endpoint
cryptography = "^41.0.7"  # For future encryption support

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
mypy = "^1.7.0"
ruff = "^0.1.6"

[tool.poetry.scripts]
secure-memory-mcp = "secure_memory_mcp.server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
